[package]
name = "hips"
license = "MIT"
readme = "README.md"
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
repository = "https://github.com/mqnfred/hips"
description = "Manage secrets alongside your code"
categories = ["command-line-utilities", "cryptography"]
keywords = ["secrets", "manager", "database", "encryption"]
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
base64 = "^0"
clap = { version = "^3", features = ["derive"] }
clishe = { path = "../clishe" }
paste = "^0"
ring = "^0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1"
serde_yaml = "0.8"
snailquote = "^0"
tinytemplate = "^1"
